CI3_Abgabeversion/MiniP/output/miniPParser.java
// $ANTLR 3.4 Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g 2014-11-20 16:45:58

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class miniPParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BEGINSYMBOL", "BOOLEANCONST", "CMDENDSYMBOL", "COMMENT", "CONSTANTSYMBOL", "DECLARATION", "DIGIT", "DOSYMBOL", "ELSESYMBOL", "ENDSYMBOL", "FISYMBOL", "ID", "IFSYMBOL", "INTEGERCONST", "KLAMMERAUFSYMBOL", "KLAMMERZUSYMBOL", "LISTCUTSYMBOL", "MALGETEILTSYMBOL", "ODSYMBOL", "PLUSMINUSSYMBOL", "PRINTLNSYMBOL", "PROGRAMMCODE", "PROGRAMSYMBOL", "READSYMBOL", "REALCONST", "REALCUTSYMBOL", "START", "STRINGCONST", "THENSYMBOL", "UNSIGNEDINTEGERCONST", "VERGLEICHSSYMBOL", "WHILESYMBOL", "WS", "ZUWEISUNGSSYMBOL"
    };

    public static final int EOF=-1;
    public static final int BEGINSYMBOL=4;
    public static final int BOOLEANCONST=5;
    public static final int CMDENDSYMBOL=6;
    public static final int COMMENT=7;
    public static final int CONSTANTSYMBOL=8;
    public static final int DECLARATION=9;
    public static final int DIGIT=10;
    public static final int DOSYMBOL=11;
    public static final int ELSESYMBOL=12;
    public static final int ENDSYMBOL=13;
    public static final int FISYMBOL=14;
    public static final int ID=15;
    public static final int IFSYMBOL=16;
    public static final int INTEGERCONST=17;
    public static final int KLAMMERAUFSYMBOL=18;
    public static final int KLAMMERZUSYMBOL=19;
    public static final int LISTCUTSYMBOL=20;
    public static final int MALGETEILTSYMBOL=21;
    public static final int ODSYMBOL=22;
    public static final int PLUSMINUSSYMBOL=23;
    public static final int PRINTLNSYMBOL=24;
    public static final int PROGRAMMCODE=25;
    public static final int PROGRAMSYMBOL=26;
    public static final int READSYMBOL=27;
    public static final int REALCONST=28;
    public static final int REALCUTSYMBOL=29;
    public static final int START=30;
    public static final int STRINGCONST=31;
    public static final int THENSYMBOL=32;
    public static final int UNSIGNEDINTEGERCONST=33;
    public static final int VERGLEICHSSYMBOL=34;
    public static final int WHILESYMBOL=35;
    public static final int WS=36;
    public static final int ZUWEISUNGSSYMBOL=37;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "declarations", "read", "arithausdr", "schleife", "product", 
    "zuweisung", "zuweisungswert", "term", "start", "declaration", "vergleich", 
    "number", "anweisung", "println", "condition", "programmcode"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false, 
        false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public miniPParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public miniPParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this,port,adaptor);
        setDebugListener(proxy);
        setTokenStream(new DebugTokenStream(input,proxy));
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);
        proxy.setTreeAdaptor(adap);
    }

public miniPParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg);
     
    TreeAdaptor adap = new CommonTreeAdaptor();
    setTreeAdaptor(adap);


}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

protected DebugTreeAdaptor adaptor;
public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = new DebugTreeAdaptor(dbg,adaptor);


}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}

    public String[] getTokenNames() { return miniPParser.tokenNames; }
    public String getGrammarFileName() { return "Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g"; }


    public static class start_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "start"
    // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:13:1: start : PROGRAMSYMBOL declaration BEGINSYMBOL programmcode ENDSYMBOL -> ^( START declaration programmcode ) ;
    public final miniPParser.start_return start() throws RecognitionException {
        miniPParser.start_return retval = new miniPParser.start_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token PROGRAMSYMBOL1=null;
        Token BEGINSYMBOL3=null;
        Token ENDSYMBOL5=null;
        miniPParser.declaration_return declaration2 =null;

        miniPParser.programmcode_return programmcode4 =null;


        CommonTree PROGRAMSYMBOL1_tree=null;
        CommonTree BEGINSYMBOL3_tree=null;
        CommonTree ENDSYMBOL5_tree=null;
        RewriteRuleTokenStream stream_PROGRAMSYMBOL=new RewriteRuleTokenStream(adaptor,"token PROGRAMSYMBOL");
        RewriteRuleTokenStream stream_ENDSYMBOL=new RewriteRuleTokenStream(adaptor,"token ENDSYMBOL");
        RewriteRuleTokenStream stream_BEGINSYMBOL=new RewriteRuleTokenStream(adaptor,"token BEGINSYMBOL");
        RewriteRuleSubtreeStream stream_programmcode=new RewriteRuleSubtreeStream(adaptor,"rule programmcode");
        RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");
        try { dbg.enterRule(getGrammarFileName(), "start");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(13, 0);

        try {
            // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:13:6: ( PROGRAMSYMBOL declaration BEGINSYMBOL programmcode ENDSYMBOL -> ^( START declaration programmcode ) )
            dbg.enterAlt(1);

            // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:14:10: PROGRAMSYMBOL declaration BEGINSYMBOL programmcode ENDSYMBOL
            {
            dbg.location(14,10);
            PROGRAMSYMBOL1=(Token)match(input,PROGRAMSYMBOL,FOLLOW_PROGRAMSYMBOL_in_start52);  
            stream_PROGRAMSYMBOL.add(PROGRAMSYMBOL1);

            dbg.location(15,13);
            pushFollow(FOLLOW_declaration_in_start67);
            declaration2=declaration();

            state._fsp--;

            stream_declaration.add(declaration2.getTree());
            dbg.location(16,10);
            BEGINSYMBOL3=(Token)match(input,BEGINSYMBOL,FOLLOW_BEGINSYMBOL_in_start78);  
            stream_BEGINSYMBOL.add(BEGINSYMBOL3);

            dbg.location(17,13);
            pushFollow(FOLLOW_programmcode_in_start93);
            programmcode4=programmcode();

            state._fsp--;

            stream_programmcode.add(programmcode4.getTree());
            dbg.location(18,10);
            ENDSYMBOL5=(Token)match(input,ENDSYMBOL,FOLLOW_ENDSYMBOL_in_start104);  
            stream_ENDSYMBOL.add(ENDSYMBOL5);


            // AST REWRITE
            // elements: programmcode, declaration
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 18:20: -> ^( START declaration programmcode )
            {
                dbg.location(18,23);
                // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:18:23: ^( START declaration programmcode )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                dbg.location(18,25);
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(START, "START")
                , root_1);

                dbg.location(18,31);
                adaptor.addChild(root_1, stream_declaration.nextTree());
                dbg.location(18,43);
                adaptor.addChild(root_1, stream_programmcode.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(18, 55);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "start");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "start"


    public static class declaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "declaration"
    // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:20:1: declaration : ( declarations )* -> ^( DECLARATION ( declarations )* ) ;
    public final miniPParser.declaration_return declaration() throws RecognitionException {
        miniPParser.declaration_return retval = new miniPParser.declaration_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        miniPParser.declarations_return declarations6 =null;


        RewriteRuleSubtreeStream stream_declarations=new RewriteRuleSubtreeStream(adaptor,"rule declarations");
        try { dbg.enterRule(getGrammarFileName(), "declaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(20, 0);

        try {
            // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:20:13: ( ( declarations )* -> ^( DECLARATION ( declarations )* ) )
            dbg.enterAlt(1);

            // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:20:15: ( declarations )*
            {
            dbg.location(20,15);
            // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:20:15: ( declarations )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==CONSTANTSYMBOL) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:20:15: declarations
            	    {
            	    dbg.location(20,15);
            	    pushFollow(FOLLOW_declarations_in_declaration122);
            	    declarations6=declarations();

            	    state._fsp--;

            	    stream_declarations.add(declarations6.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}


            // AST REWRITE
            // elements: declarations
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 20:29: -> ^( DECLARATION ( declarations )* )
            {
                dbg.location(20,32);
                // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:20:32: ^( DECLARATION ( declarations )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                dbg.location(20,34);
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(DECLARATION, "DECLARATION")
                , root_1);

                dbg.location(20,46);
                // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:20:46: ( declarations )*
                while ( stream_declarations.hasNext() ) {
                    dbg.location(20,46);
                    adaptor.addChild(root_1, stream_declarations.nextTree());

                }
                stream_declarations.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(20, 59);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "declaration"


    public static class declarations_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "declarations"
    // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:21:1: declarations : ( CONSTANTSYMBOL ID ( LISTCUTSYMBOL ID )* CMDENDSYMBOL ) -> ^( CONSTANTSYMBOL ( ID )* ) ;
    public final miniPParser.declarations_return declarations() throws RecognitionException {
        miniPParser.declarations_return retval = new miniPParser.declarations_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token CONSTANTSYMBOL7=null;
        Token ID8=null;
        Token LISTCUTSYMBOL9=null;
        Token ID10=null;
        Token CMDENDSYMBOL11=null;

        CommonTree CONSTANTSYMBOL7_tree=null;
        CommonTree ID8_tree=null;
        CommonTree LISTCUTSYMBOL9_tree=null;
        CommonTree ID10_tree=null;
        CommonTree CMDENDSYMBOL11_tree=null;
        RewriteRuleTokenStream stream_CONSTANTSYMBOL=new RewriteRuleTokenStream(adaptor,"token CONSTANTSYMBOL");
        RewriteRuleTokenStream stream_CMDENDSYMBOL=new RewriteRuleTokenStream(adaptor,"token CMDENDSYMBOL");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_LISTCUTSYMBOL=new RewriteRuleTokenStream(adaptor,"token LISTCUTSYMBOL");

        try { dbg.enterRule(getGrammarFileName(), "declarations");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(21, 0);

        try {
            // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:21:15: ( ( CONSTANTSYMBOL ID ( LISTCUTSYMBOL ID )* CMDENDSYMBOL ) -> ^( CONSTANTSYMBOL ( ID )* ) )
            dbg.enterAlt(1);

            // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:21:17: ( CONSTANTSYMBOL ID ( LISTCUTSYMBOL ID )* CMDENDSYMBOL )
            {
            dbg.location(21,17);
            // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:21:17: ( CONSTANTSYMBOL ID ( LISTCUTSYMBOL ID )* CMDENDSYMBOL )
            dbg.enterAlt(1);

            // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:21:18: CONSTANTSYMBOL ID ( LISTCUTSYMBOL ID )* CMDENDSYMBOL
            {
            dbg.location(21,18);
            CONSTANTSYMBOL7=(Token)match(input,CONSTANTSYMBOL,FOLLOW_CONSTANTSYMBOL_in_declarations141);  
            stream_CONSTANTSYMBOL.add(CONSTANTSYMBOL7);

            dbg.location(21,33);
            ID8=(Token)match(input,ID,FOLLOW_ID_in_declarations143);  
            stream_ID.add(ID8);

            dbg.location(21,36);
            // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:21:36: ( LISTCUTSYMBOL ID )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==LISTCUTSYMBOL) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:21:37: LISTCUTSYMBOL ID
            	    {
            	    dbg.location(21,37);
            	    LISTCUTSYMBOL9=(Token)match(input,LISTCUTSYMBOL,FOLLOW_LISTCUTSYMBOL_in_declarations146);  
            	    stream_LISTCUTSYMBOL.add(LISTCUTSYMBOL9);

            	    dbg.location(21,51);
            	    ID10=(Token)match(input,ID,FOLLOW_ID_in_declarations148);  
            	    stream_ID.add(ID10);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}

            dbg.location(21,56);
            CMDENDSYMBOL11=(Token)match(input,CMDENDSYMBOL,FOLLOW_CMDENDSYMBOL_in_declarations152);  
            stream_CMDENDSYMBOL.add(CMDENDSYMBOL11);


            }


            // AST REWRITE
            // elements: CONSTANTSYMBOL, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 21:70: -> ^( CONSTANTSYMBOL ( ID )* )
            {
                dbg.location(21,73);
                // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:21:73: ^( CONSTANTSYMBOL ( ID )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                dbg.location(21,75);
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_CONSTANTSYMBOL.nextNode()
                , root_1);

                dbg.location(21,90);
                // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:21:90: ( ID )*
                while ( stream_ID.hasNext() ) {
                    dbg.location(21,90);
                    adaptor.addChild(root_1, 
                    stream_ID.nextNode()
                    );

                }
                stream_ID.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(21, 93);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declarations");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "declarations"


    public static class programmcode_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "programmcode"
    // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:24:1: programmcode : ( anweisung )* -> ^( PROGRAMMCODE ( anweisung )* ) ;
    public final miniPParser.programmcode_return programmcode() throws RecognitionException {
        miniPParser.programmcode_return retval = new miniPParser.programmcode_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        miniPParser.anweisung_return anweisung12 =null;


        RewriteRuleSubtreeStream stream_anweisung=new RewriteRuleSubtreeStream(adaptor,"rule anweisung");
        try { dbg.enterRule(getGrammarFileName(), "programmcode");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(24, 0);

        try {
            // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:24:15: ( ( anweisung )* -> ^( PROGRAMMCODE ( anweisung )* ) )
            dbg.enterAlt(1);

            // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:24:17: ( anweisung )*
            {
            dbg.location(24,17);
            // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:24:17: ( anweisung )*
            try { dbg.enterSubRule(3);

            loop3:
            do {
                int alt3=2;
                try { dbg.enterDecision(3, decisionCanBacktrack[3]);

                int LA3_0 = input.LA(1);

                if ( ((LA3_0 >= ID && LA3_0 <= IFSYMBOL)||LA3_0==PRINTLNSYMBOL||LA3_0==READSYMBOL||LA3_0==WHILESYMBOL) ) {
                    alt3=1;
                }


                } finally {dbg.exitDecision(3);}

                switch (alt3) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:24:17: anweisung
            	    {
            	    dbg.location(24,17);
            	    pushFollow(FOLLOW_anweisung_in_programmcode172);
            	    anweisung12=anweisung();

            	    state._fsp--;

            	    stream_anweisung.add(anweisung12.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);
            } finally {dbg.exitSubRule(3);}


            // AST REWRITE
            // elements: anweisung
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 24:28: -> ^( PROGRAMMCODE ( anweisung )* )
            {
                dbg.location(24,31);
                // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:24:31: ^( PROGRAMMCODE ( anweisung )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                dbg.location(24,33);
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(PROGRAMMCODE, "PROGRAMMCODE")
                , root_1);

                dbg.location(24,46);
                // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:24:46: ( anweisung )*
                while ( stream_anweisung.hasNext() ) {
                    dbg.location(24,46);
                    adaptor.addChild(root_1, stream_anweisung.nextTree());

                }
                stream_anweisung.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(24, 56);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "programmcode");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "programmcode"


    public static class anweisung_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "anweisung"
    // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:25:1: anweisung : ( zuweisung | condition | schleife | println | read );
    public final miniPParser.anweisung_return anweisung() throws RecognitionException {
        miniPParser.anweisung_return retval = new miniPParser.anweisung_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        miniPParser.zuweisung_return zuweisung13 =null;

        miniPParser.condition_return condition14 =null;

        miniPParser.schleife_return schleife15 =null;

        miniPParser.println_return println16 =null;

        miniPParser.read_return read17 =null;



        try { dbg.enterRule(getGrammarFileName(), "anweisung");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(25, 0);

        try {
            // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:25:12: ( zuweisung | condition | schleife | println | read )
            int alt4=5;
            try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            switch ( input.LA(1) ) {
            case ID:
                {
                alt4=1;
                }
                break;
            case IFSYMBOL:
                {
                alt4=2;
                }
                break;
            case WHILESYMBOL:
                {
                alt4=3;
                }
                break;
            case PRINTLNSYMBOL:
                {
                alt4=4;
                }
                break;
            case READSYMBOL:
                {
                alt4=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:25:14: zuweisung
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    dbg.location(25,14);
                    pushFollow(FOLLOW_zuweisung_in_anweisung190);
                    zuweisung13=zuweisung();

                    state._fsp--;

                    adaptor.addChild(root_0, zuweisung13.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:25:26: condition
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    dbg.location(25,26);
                    pushFollow(FOLLOW_condition_in_anweisung194);
                    condition14=condition();

                    state._fsp--;

                    adaptor.addChild(root_0, condition14.getTree());

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:25:38: schleife
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    dbg.location(25,38);
                    pushFollow(FOLLOW_schleife_in_anweisung198);
                    schleife15=schleife();

                    state._fsp--;

                    adaptor.addChild(root_0, schleife15.getTree());

                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:25:49: println
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    dbg.location(25,49);
                    pushFollow(FOLLOW_println_in_anweisung202);
                    println16=println();

                    state._fsp--;

                    adaptor.addChild(root_0, println16.getTree());

                    }
                    break;
                case 5 :
                    dbg.enterAlt(5);

                    // Z:\\win7\\Studium\\CI\\CI3\\MiniP\\miniP.g:25:59: read
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    dbg.location(25,59);
                    pushFollow(FOLLOW_read_in_anweisung206);
                    read17=read();

                    state._fsp--;

                    adaptor.addChild(root_0, read17.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(25, 62);
